[gd_scene load_steps=9 format=3 uid="uid://benqvi8jf1a3v"]

[ext_resource type="Script" uid="uid://bs5iogpvifrxp" path="res://src/ui/hud/hud.gd" id="1_1wsu8"]
[ext_resource type="FontFile" uid="uid://dmjdhsomc3fwp" path="res://assets/fonts/Coopers Town.otf" id="2_cpm4x"]
[ext_resource type="Texture2D" uid="uid://bcd8k243yithf" path="res://assets/graphics/ui/panel.png" id="2_pv7ps"]
[ext_resource type="Texture2D" uid="uid://ck3gg52jmti3m" path="res://assets/graphics/proto/howtoplay.png" id="4_ariom"]
[ext_resource type="Theme" uid="uid://b5xvitnc8cji" path="res://assets/themes/base_menu_theme.tres" id="4_cio14"]
[ext_resource type="Script" uid="uid://raghio163m0c" path="res://src/components/c_gui_scale.gd" id="5_cio14"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qn7c4"]
bg_color = Color(0.168627, 0.168627, 0.168627, 0.482353)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_y3bum"]
bg_color = Color(0.911162, 0.444643, 0.294971, 1)

[node name="Hud" type="CanvasLayer"]
layer = 0
script = ExtResource("1_1wsu8")

[node name="ScreenMarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="TopLeft_VBox" type="VBoxContainer" parent="."]
offset_left = 20.0
offset_top = 20.0
offset_right = 1132.0
offset_bottom = 628.0
theme_override_constants/separation = 10

[node name="HealthBar" type="ProgressBar" parent="TopLeft_VBox"]
custom_minimum_size = Vector2(200, 25)
layout_mode = 2

[node name="StarchLabel" type="Label" parent="TopLeft_VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.945098, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_cpm4x")
theme_override_font_sizes/font_size = 40
text = "Starch: 0"

[node name="SpeedLabel" type="Label" parent="TopLeft_VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.945098, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_cpm4x")
theme_override_font_sizes/font_size = 40

[node name="FPSLabel" type="Label" parent="TopLeft_VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.945098, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_cpm4x")
theme_override_font_sizes/font_size = 40

[node name="ScoreLabel" type="Label" parent="TopLeft_VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.945098, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_cpm4x")
theme_override_font_sizes/font_size = 40

[node name="BottomRight_HBox" type="HBoxContainer" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1172.0
offset_top = -668.0
offset_right = -60.0
offset_bottom = -60.0
grow_horizontal = 0
grow_vertical = 0
theme_override_constants/separation = 15
alignment = 2

[node name="Ability1_Icon" type="TextureRect" parent="BottomRight_HBox"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
texture = ExtResource("2_pv7ps")

[node name="Ability1_CooldownBar" type="ProgressBar" parent="BottomRight_HBox/Ability1_Icon"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxFlat_qn7c4")
theme_override_styles/fill = SubResource("StyleBoxFlat_y3bum")

[node name="Ability 1 Label" type="RichTextLabel" parent="BottomRight_HBox/Ability1_Icon"]
layout_mode = 0
offset_left = 9.0
offset_top = 64.0
offset_right = 58.0
offset_bottom = 129.0
theme = ExtResource("4_cio14")
theme_override_font_sizes/normal_font_size = 51
text = "Q"

[node name="Ability2_Icon" type="TextureRect" parent="BottomRight_HBox"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
texture = ExtResource("2_pv7ps")

[node name="Ability2_CooldownBar" type="ProgressBar" parent="BottomRight_HBox/Ability2_Icon"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Ability 2 Label" type="RichTextLabel" parent="BottomRight_HBox/Ability2_Icon"]
layout_mode = 0
offset_left = 14.0
offset_top = 66.0
offset_right = 57.0
offset_bottom = 122.0
theme = ExtResource("4_cio14")
theme_override_font_sizes/normal_font_size = 51
text = "E"

[node name="Howtoplay" type="Sprite2D" parent="."]
position = Vector2(137, 983)
scale = Vector2(0.239791, 0.239791)
texture = ExtResource("4_ariom")

[node name="Node" type="Node" parent="Howtoplay"]
script = ExtResource("5_cio14")
enable_hover_effect = false
enable_pulse_effect = true
pulse_min_scale = 0.25
pulse_max_scale = 0.265
pulse_duration = 6.0
